2005-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-marks-changed-p): Use time-less-p to compare the
	timestamps.

2005-01-29  Jari Aalto  <jari.aalto@cante.net>

	* gnus-sum.el (gnus-list-of-unread-articles): Improve active
	groups error checking and notify user.

2004-09-04  Jari Aalto  <jari.aalto@poboxes.com>

	* message.el (message-send-mail-function): Check existence of
	sendmail-program first before using default value
	`message-send-mail-with-sendmail'.  Otherwise use more generic
	`smtpmail-send-it'.

2005-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-request-update-info): Always return nil.

2005-01-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-beginning-of-line): Change the behavior when
	invoked between BOL and : so that it first moves backward.

2005-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-setup-buffer): Kill and re-create the
	article buffer when editing of the article is discarded.
	(gnus-article-prepare): Revert.

2005-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-prepare): Remove
	message-strip-forbidden-properties from the local hook.

2005-01-27  Simon Josefsson  <jas@extundo.com>

	* password.el (password-cache-add): Only start one timer per key.
	Reported by Derek Atkins <warlord@MIT.EDU>.

2005-01-26  Steve Youngs  <steve@sxemacs.org>

	* run-at-time.el: Removed.  It is no longer needed as
	timer-funcs.el in the xemacs-base package has a working version of
	`run-at-time'.

	* gnus-xmas.el: Require timer-funcs instead of run-at-time.

	* password.el: Require timer-funcs instead of run-at-time in
	XEmacs.
	Remove `password-run-at-time' macro.
	(password-cache-add): Use `run-at-time' instead of
	`password-run-at-time'. 

	* nnheaderxm.el: Require timer-funcs instead of run-at-time.
	Remove `nnheader-cancel-function-timers' alias,
	`cancel-function-timers' exists in XEmacs in timer-funcs. 
